--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <h1> BALLSACK RADIO DOT COM! </h1>
 <br>
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
-<audio controls="" preload="none" style="width:16em;padding:0;"><source src="listen.pls?sid=1" type="audio/mpeg"></audio>
+<audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
 </body>
