--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
 <br>
   <p>song name:</p> <a href="http://71.205.219.166:8000/currentsong?sid=1"></a>
+  <p>song name:</p> <a href="listen.pls?currentsong?sid=1"></a>
+  <p>song name:</p> <a href="listen.pls/currentsong?sid=1"></a>
+  <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
 <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
 </body>
