--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <br>
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
 <br>
-  <p>song name:</p> <a href="http://71.205.219.166:8000/currentsong?sid=1"></a>
+  <p>song name:</p> <a href="http://71.205.219.166:8000/currentsong?sid=1">dasdsadasdsa</a>
   <p>song name:</p> <a href="listen.pls?currentsong?sid=1"></a>
   <p>song name:</p> <a href="listen.pls/currentsong?sid=1"></a>
   <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
