--- a/index.html
+++ b/index.html
@@ -10,4 +10,5 @@
   <p>song name:</p> <a href="listen.pls/currentsong?sid=1"></a>
   <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
 <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
+  <iframe src="http://71.205.219.166:8000/index.html?sid=1"></iframe>
 </body>
