--- a/index.html
+++ b/index.html
@@ -11,4 +11,11 @@
   <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
 <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
   <iframe width="100%" height="100% left="0" right="0" top="0" bottom="0" "src="http://71.205.219.166:8000/index.html?sid=1"></iframe>
+  
+  <br>
+  <div id="app"></div>
+<script src="https://unpkg.com/webamp"></script>
+<script>new Webamp().renderWhenReady(app);</script>
+<br>
+lol
 </body>
