--- a/testicle.html
+++ b/testicle.html
@@ -16,8 +16,8 @@
   <div id="app"></div>
 <script src="https://unpkg.com/webamp"></script>
 <script>new Webamp().renderWhenReady(app);</script>
-                                      initialTracks: [
-                {
+<script>  initialTracks: [</script>
+<script>  {
                     metaData: {
                         artist: "Ballsack Radio",
                         title: "yay?"
@@ -30,7 +30,7 @@
                 },
           
             ],
-
+                                     </script>
 <br>
 lol
 </body>
