--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
 <br>
   <p>song name:</p> <a href="http://71.205.219.166:8000/currentsong?sid=1">dasdsadasdsa</a>
+  <p>song name:</p> <embed src="http://71.205.219.166:8000/currentsong?sid=1" width="500" height="75"></embed>
   <p>song name:</p> <a href="listen.pls?currentsong?sid=1"></a>
   <p>song name:</p> <a href="listen.pls/currentsong?sid=1"></a>
   <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
