--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <title> ballsac radio :)) </title>
 <body>
+<center>
 <h1> BALLSACK RADIO DOT COM! </h1>
 <br>
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
@@ -14,4 +15,5 @@
   <br>
 <br>
 lol
+  </center>
 </body>
