--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 <br>
 <p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
 <br>
-  <p>song name:</p> <a href="http://71.205.219.166:8000/currentsong?sid=1">dasdsadasdsa</a>
-  <p>song name:</p> <embed src="http://71.205.219.166:8000/currentsong?sid=1" width="500" height="75"></embed>
-  <p>song name:</p> <a href="listen.pls?currentsong?sid=1"></a>
-  <p>song name:</p> <a href="listen.pls/currentsong?sid=1"></a>
-  <p>song name:</p> <a href="listen.pls/currentsong/sid=1"></a>
+  <p>artist - name:</p> <embed src="http://71.205.219.166:8000/currentsong?sid=1" width="500" height="25"></embed>
+  <p>up next:</p> <embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="25"></embed>
 <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>  
   <br>
 <br>
