--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <center>
 <h1> BALLSACK RADIO DOT COM! </h1>
 <br>
-<p><a href="http://71.205.219.166:8000/"> click here to visit :) </a></p>
 <br>
   <p>artist - name:</p> <embed src="http://71.205.219.166:8000/currentsong?sid=1" width="500" height="25"></embed>
   <p>up next:</p> <embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="25"></embed>
@@ -12,5 +11,7 @@
   <br>
 <br>
 lol
+<br>
+<p><a href="http://71.205.219.166:8000/">visit the SHOUTcast server page</a></p>
   </center>
 </body>
