--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <p>downlaod for your own music player!</p>
 <br>
-  <a href=ballsack radio.pls>PLS>/a>>p>  ---  </p><a href=ballsack radio.m3u>M3U</a>
+  <a href=ballsack_radio.pls>PLS>/a><p>  ---  </p><a href=ballsack_radio.m3u>M3U</a>
   <br>
 <br>
 lol
