--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <br>
   <p>downlaod for your own music player!</p>
 <br>
-  <p><a href=ballsack_radio.pls>PLS>/a>  ---  <a href=ballsack_radio.m3u>M3U</a></p>
+  <p><a href=ballsackradio.pls>PLS></a>  ---  <a href=ballsackradio.m3u>M3U</a></p>
   <br>
 <br>
 lol
