--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>  
   <br>
   <p>downlaod for your own music player!</p>
-<br>
-  <p><a href=ballsackradio.pls>PLS</a>  ---  <a href=ballsackradio.m3u>M3U</a></p>
+  <p><a href="ballsackradio.pls">PLS</a>  ---  <a href="ballsackradio.m3u">M3U</a></p>
   <br>
+  <a href="http://71.205.219.166:8000/played.html?sid=1">Song History</a>
 <br>
 lol
 <br>
