--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <center>
 <h1> BALLSACK RADIO DOT COM! </h1>
 <br>
+  <h2>Play Now:</h2> <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>  
 <br>
   <p>artist - name:</p>
   <br>
@@ -12,7 +13,6 @@
   <br>
   <embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="30"></embed>
   <br>
-<audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>  
   <br>
   <p>downlaod for your own music player!</p>
   <p><a href="ballsackradio.pls">PLS</a>  ---  <a href="ballsackradio.m3u">M3U</a></p>
