--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <center>
 <h1> BALLSACK RADIO DOT COM! </h1>
 <br>
-  <h2>Play Now:</h2> <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>  
+  <h2>Play Now: <audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio> </h2>
 <br>
   <p>artist - name:</p>
   <br>
