--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
-<title> ballsac radio :)) </title>
+<title> ballsack radio :) </title>
 <body>
 <center>
-<h1> BALLSACK RADIO DOT COM! </h1>
+<h1> BALLSACK RADIO! </h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
 <br>
