--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="30"></embed>
 <br>
 <br>
-<p>downlaod for your own music player!</p>
+<p>download for your own music player!</p>
 <p><a href="ballsackradio.pls">PLS</a>  ---  <a href="ballsackradio.m3u">M3U</a></p>
 <br>
 <a href="http://71.205.219.166:8000/played.html?sid=1">Song History</a>
