--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <embed type="text/html" src="http://71.205.219.166:8000/currentsong?sid=1" height="30"></embed>
 <p>up next:</p>
 <br>
-<embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="30"></embed>
+<embed type="text/html" src="http://71.205.219.166:8000/nextsong?sid=1" height="30"></embed>
 <br>
 <br>
 <p>download for your own music player!</p>
