--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <br>
 <p>artist - name:</p>
 <br>
-  <embed type="text/html" src="<center>http://71.205.219.166:8000/currentsong?sid=1</center>" height="30"></embed>
+<embed type="text/html" src="http://71.205.219.166:8000/currentsong?sid=1" height="30"></embed>
 <p>up next:</p>
 <br>
 <embed type="text/html" src="http://71.205.219.166:8000/nextsong?sid=1" height="30"></embed>
