--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
 <head>
 <title> ballsack radio :) </title>
+</head>
+<script>
+function includeHTML()
+{
+  var z, i, elmnt, file, xhttp;
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++)
+  {
+    elmnt = z[i];
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) 
+    {
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function()
+      {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      return;
+    }
+  }
+}
+</script>
 <body>
 <center>
 <h1> BALLSACK RADIO! </h1>
@@ -8,10 +37,10 @@
 <br>
 <p>artist - name:</p>
 <br>
-<embed type="text/html src="http://71.205.219.166:8000/currentsong?sid=1" height="30"></embed>
+<div w3-include-html="http://71.205.219.166:8000/currentsong?sid=1"></div>
 <p>up next:</p>
 <br>
-<embed src="http://71.205.219.166:8000/nextsong?sid=1" width="500" height="30"></embed>
+<div w3-include-html="http://71.205.219.166:8000/nextsong?sid=1"></div>
 <br>
 <br>
 <p>download for your own music player!</p>
@@ -23,4 +52,7 @@ lol
 <br>
 <p><a href="http://71.205.219.166:8000/">visit the SHOUTcast server page</a></p>
 </center>
+<script>
+includeHTML();
+</script>
 </body>
