--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title> ballsack radio :) </title>
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
+<div style="background-image: url('bg.png');"> 
 </head>
 <body>
 <center>
