--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <center>
-<h1> BALLSACK RADIO! </h1>
+<img src=cirno.png/><h1> BALLSACK RADIO! </h1><img src=cirno.png/>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://71.205.219.166:8000/sid=1" type="audio/mpeg"></audio>
 <br>
