--- a/index.html
+++ b/index.html
@@ -25,5 +25,40 @@
 lol
 <br>
 <p><a href="http://71.205.219.166:8000/">visit the SHOUTcast server page</a></p>
+  <br>
+  <img src="buttons/xp.gif" />
+<a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
+<img src="buttons/al.gif" />
+<img src="buttons/weezer.gif" />
+<img src="buttons/gothtml.gif"/>
+<br>
+<img src="buttons/2600.gif" />
+<img src="buttons/dilbert.gif" />
+<img src="buttons/dreamcast.gif" />
+<img src="buttons/flash.gif" />
+<img src="buttons/koolaid.gif"/>
+<br>
+<img src="buttons/midi.gif" />
+<img src="buttons/n64.gif" />
+<img src="buttons/no.gif" />
+<img src="buttons/playstation.gif" />
+<a href="http://www.getwacup.com/"><img src="buttons/winamp.gif" /></a>
+<br>
+<img src="buttons/2003.gif" />
+<img src="buttons/aim.gif" />
+<img src="buttons/twotrucks.gif" />
+<br>
+<img src="buttons/caffiene.gif" />
+<img src="buttons/thrift.gif" />
+<img src="buttons/gumby.gif" />
+<br>
+<img src="buttons/terfs.gif" />
+<img src="buttons/idiot.gif" />
+<img src="buttons/lemon.gif" />
+<br>
+<img src="buttons/online.jpg" />
+<img src="buttons/sa2.gif" />
+<img src="buttons/tails.gif" />
+<br>
 </center>
 </body>
