--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br>
 <a href="http://71.205.219.166:8000/played.html?sid=1">Song History</a>
 <br>
-lol
+  <h3>Powered by <a href="https://www.shoutcast.com/">SHOUTcast</a> and <a href="https://www.getwacup.com/">WACUP (WinAmp Community Update Project)</a></h3>
 <br>
 <p><a href="http://71.205.219.166:8000/">visit the SHOUTcast server page</a></p>
   <br>
