--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <br>
 <img src="buttons/midi.gif" />
 <img src="buttons/n64.gif" />
-<img src="buttons/no.gif" />
+  <a href="http://www.crouton.net/"><img src="buttons/no.gif" /></a >
 <img src="buttons/playstation.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/winamp.gif" /></a>
 <br>
