--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
 <img src="buttons/dreamcast.gif" />
+  <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
 <img src="buttons/flash.gif" />
 <img src="buttons/koolaid.gif"/>
 <br>
