--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 <title> ballsack radio :) </title>
+  <link rel="icon" href="cirno.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
 <body background="bg.png">
