--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <br>
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
-<img src="buttons/dreamcast.gif" />
+<a href="https://www.youtube.com/channel/UC9Yy7Tig7KR0mX4NJz_KGgA"><img src="buttons/dreamcast.gif" /></a>
   <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
 <img src="buttons/flash.gif" />
 <img src="buttons/koolaid.gif"/>
