--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <img src="buttons/dilbert.gif" />
 <a href="https://www.youtube.com/channel/UC9Yy7Tig7KR0mX4NJz_KGgA"><img src="buttons/dreamcast.gif" /></a>
   <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
-<img src="buttons/flash.gif" />
+  <a href="https://animatearchive.neocities.org/"><img src="buttons/flash.gif" /></a>
 <img src="buttons/koolaid.gif"/>
 <br>
 <img src="buttons/midi.gif" />
