--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <br>
 <p><a href="http://71.205.219.166:8000/">visit the SHOUTcast server page</a></p>
   <br>
-  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a></p>
+  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a>  ---  <a href="https://www.twitter.com/BallsackFeed">Live-updating Twitter Bot</a></p>
   <br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
