--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -67,7 +67,7 @@ hello! my name is Mia. my pronouns are she/her. i like video games a lot. I also
 <br>
 <br>
 <br>
-  <h1>Check out my radio station! <a href="index"></a></h1>
+  <h1><a href="index">Check out my radio station!</a>
 <br>
 <br>
 </center>
