--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -14,15 +14,109 @@ body, html {
 <h1>About Me</h1>
 <br>
 <h3>
-hello! my name is Mia. my pronouns are she/her. i like video games a lot. I also like music a lot. 
+hello! my name is Mia. my pronouns are she/her. i'm 18, trans and pan. i like video games a lot. I also like music a lot.<br>
+  i use tone indicators every once and a while. if that bothers you sorry lol<br>
+if u need me to tag something lmk<br>
+  i made this instead of a carrd becuase HTML RULEZ!@!!!<br>
+please dm me about anything and everything! i love talking to people. :)<br>
+  
 </h3>
 <br>
 <br>
 <h1> Intrests </h1>
-  <h2> i love all of these. please talk to me about all of these </h2>
-<h3>Taiko no Tatsujin<br>pop'n music<br>Puyo Puyo<br>Sonic The Hedgehog<br>Vintage Technology<br>Video Game/Tech Collecting<br>Media Archival<br>Lemon Demon<br>
-  Jack Stauber<br>They Might Be Giants<br>Homestar Runner<br>Windows XP<br>PaRappa The Rapper<br>Katamari<br>Rhythm Heaven<br>and many more... </h3>
+  <h2> i love all of these. please talk to me about any/all of these. in no paricular order i love these all the same </h2>
+  <h2>Video Games</h2>
+<h3>Taiko no Tatsujin<br>
+  pop'n music (Bemani in general but i play pop'n)<br>
+  Puyo Puyo<br>
+  Sonic The Hedgehog<br>
+  Video Game/Tech Collecting<br>
+  PaRappa The Rapper<br>
+Katamari<br>
+  Rhythm Heaven<br>
+  Pac-Man<br>
+  Paper Mario<br>
+  Okami<br>
+  Jet Set Radio<br>
+  Animal Crossing<br>
+  Kirby<br>
+  Undertale/Deltarune<br>
+  Vib-Ribbon<br>
+  Lego Island 1 (i HATE li2)<br>
+  PikuNiku<br>
+  Tetris<br>
+  CROSSNIQ+<br>
+  Crazy Taxi<br>
+DOOM<br>
+  Puzzle Fighter<br>
+ Cave Story<br>
+  Super Mario<br>
+  VVVVVV<br>
+  Peggle<br>
+  RollerCoaster Tycoon<br>
+  WarioWare<br>
+  LocoRoco<br>
+  and many many more..... (i play a LOT of video games. like, a LOT.)
+  
+  
+  
+  </h3>
+  
+  
+  <h2>Music</h2>
+  <h2><a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1"Topster 5/12/21></a></h2><br><h3>
+  Lemon Demon/Neil Ciciriega (he is a funny.)<br>
+  Jack Stauber<br>
+  They Might Be Giants<br>
+  Music Collecting<br>
+  Classic Rock, in general<br>
+  The Beatles (i am sorry)<br>
+  Weezer (i am SO SO sorry><br>
+talkshow boy<br>
+  Daft Punk<br>
+  Bauhaus<br>
+  Nirvana<br>
+  "Weird Al" Yankovic<br>
+  The Torpedoes<br>
+  Mort Garson<br>
+Billy Cobb<br>
+  Lawn Care<br>
+  the scary jokes<br>
+  Red Vox<br>
+  2-Mello<br>
+  Hampsterdance: The Album<br>
+  and video game music (i am sorry)<br>
+feel free to reccomend me music! i love listening to things ive never heard before!
+  </h3>
+  <br>
+  <br>
+  <h2>Shows</h2><br><h3>
+  Homestar Runner<br>
+  Aqua Teen Hunger Force<br>
+  Beavis and Butthead<br>
+  Pop Team Epic<br>
+Nichijou<br>
+Azumanga Daioh (watching rn)><br>
+  Veggietales (lmao)<br>
+Angry Video Game Nerd<br>
+  Hey Arnold!<br>
+  Rugrats<br>
+And more...  
+  </h3>
+  <br>
+  <br>
+  <h2>Other</h2><br><h3>
+  Vintage Technology<br>
+  Media Archival<br>
+ Windows XP<br>
+  itemLabel<br>
+  PC Building<br>
+  Piracy :)<br>
+Garfield<br>
+  Winamp<br>
+  and many more... </h3>
 <br>
+  <br>
 <br>
 <h1> Socials/Contact </h1>
 <h3><a href="https://twitter.com/BajaBlastGrrl03/">Twitter: @BajaBlastGrrl03</a>
@@ -67,7 +161,7 @@ hello! my name is Mia. my pronouns are she/her. i like video games a lot. I also
 <br>
 <br>
 <br>
-  <h1><a href="index">Check out my radio station!</a>
+  <h1><a href="http://www.ballsackradio.com/">Check out my radio station!</a>
 <br>
 <br>
 </center>
