--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -25,6 +25,8 @@ please dm me about anything and everything! i love talking to people. :)<br>
 <br>
 <h1> Intrests </h1>
   <h2> i love all of these. please talk to me about any/all of these. in no paricular order i love these all the same </h2>
+<br>
+  <br>
   <h2>Video Games</h2>
 <h3>Taiko no Tatsujin<br>
   pop'n music (Bemani in general but i play pop'n)<br>
@@ -56,13 +58,9 @@ DOOM<br>
   RollerCoaster Tycoon<br>
   WarioWare<br>
   LocoRoco<br>
-  and many many more..... (i play a LOT of video games. like, a LOT.)
-  
-  
-  
-  </h3>
-  
-  
+  and many many more..... (i play a LOT of video games. like, a LOT.)</h3>
+ <br>
+  <br>
   <h2>Music</h2>
   <h2><a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1"Topster 5/12/21></a></h2><br><h3>
   Lemon Demon/Neil Ciciriega (he is a funny.)<br>
