--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -63,7 +63,8 @@ DOOM<br>
  <br>
   <br>
   <h2>Music</h2>
-  <h2><a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1/>"Topster 5/12/21></a></h2><br><h3>
+  <h2>
+<a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1/>">Topster 5-12-21</a></h2><br><h3>
   Lemon Demon/Neil Ciciriega (he is a funny.)<br>
   Jack Stauber<br>
   They Might Be Giants<br>
