--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -9,9 +9,9 @@ body, html {
 <body background="background.gif">
 <body>
 <center>
-<h1>Welcome To My Cool WebSite!!!</h1>
+<img src=gifs/smiley.gif /><h1>Welcome To My Cool WebSite!!!</h1><img src=gifs/lime.gif />
 <br />
-<h1>About Me</h1>
+<img src=gifs/phone.gif /><h1>About Me</h1><img src=gifs/paper.gif />
 <br>
 <h3>
 hello! my name is Mia. my pronouns are she/her. i'm 18, trans and pan. i like video games a lot. I also like music a lot.<br>
@@ -23,11 +23,11 @@ please dm me about anything and everything! i love talking to people. :)<br>
 </h3>
 <br>
 <br>
-<h1> Intrests </h1>
+<img src=gifs/dew.gif /><h1> Intrests </h1><img src=gifs/cpep.gif />
   <h2> i love all of these. please talk to me about any/all of these. in no paricular order i love these all the same </h2>
 <br>
   <br>
-  <h2>Video Games</h2>
+  <img src=gifs/sonic.gif /><h2>Video Games</h2><img src=gifs/N64.gif />
   <br>
 <h3>Taiko no Tatsujin<br>
   pop'n music (Bemani in general but i play pop'n)<br>
@@ -62,7 +62,7 @@ DOOM<br>
   and many many more..... (i play a LOT of video games. like, a LOT.)</h3>
  <br>
   <br>
-  <h2>Music</h2>
+  <img src=gifs/totakeke.gif /><h2>Music</h2><img src=gifs/dance.gif />
   <h2>
 <a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1/>">Topster 5-12-21</a></h2><br><h3>
   Lemon Demon/Neil Ciciriega (he is a funny.)<br>
@@ -90,7 +90,7 @@ feel free to reccomend me music! i love listening to things ive never heard befo
   </h3>
   <br>
   <br>
-  <h2>Shows</h2><br><h3>
+  <img src=gifs/tv.gif /><h2>Shows</h2><img src=gifs/vhs.gif /><br><h3>
   Homestar Runner<br>
   Aqua Teen Hunger Force<br>
   Beavis and Butthead<br>
@@ -105,7 +105,8 @@ And more...
   </h3>
   <br>
   <br>
-  <h2>Other</h2><br><h3>
+  <img src=gifs/disc.gif /><h2>Other</h2><img src=gifs/win.gif /><br><h3>
+  Mountain Dew<br>
   Vintage Technology<br>
   Media Archival<br>
  Windows XP<br>
@@ -118,7 +119,7 @@ Garfield<br>
 <br>
   <br>
 <br>
-<h1> Socials/Contact </h1>
+<img src=gifs/house.gif /><h1> Socials/Contact </h1><img src=gifs/mail.gif />
 <h3><a href="https://twitter.com/BajaBlastGrrl03/">Twitter: @BajaBlastGrrl03</a>
 <br> Discord: BajaBlastGrrl03#9091</h3>
 <br>
@@ -161,7 +162,7 @@ Garfield<br>
 <br>
 <br>
 <br>
-  <h1><a href="http://www.ballsackradio.com/">Check out my radio station!</a>
+  <img src=gifs/headphone.gif /><h1><a href="http://www.ballsackradio.com/">Check out my radio station!</a><img src=gifs/neil.gif />
 <br>
 <br>
 </center>
