--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -71,7 +71,7 @@ DOOM<br>
   Music Collecting<br>
   Classic Rock, in general<br>
   The Beatles (i am sorry)<br>
-  Weezer (i am SO SO sorry><br>
+  Weezer (i am SO SO sorry)<br>
 talkshow boy<br>
   Daft Punk<br>
   Bauhaus<br>
@@ -96,7 +96,7 @@ feel free to reccomend me music! i love listening to things ive never heard befo
   Beavis and Butthead<br>
   Pop Team Epic<br>
 Nichijou<br>
-Azumanga Daioh (watching rn)><br>
+Azumanga Daioh (watching rn)<br>
   Veggietales (lmao)<br>
 Angry Video Game Nerd<br>
   Hey Arnold!<br>
