--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -9,7 +9,7 @@ body, html {
 <body background="background.gif">
 <body>
 <center>
-<img src=gifs/smiley.gif /><h1>Welcome To My Cool WebSite!!!</h1><img src=gifs/lime.gif />
+<h1><img src=gifs/smiley.gif />Welcome To My Cool WebSite!!!<img src=gifs/lime.gif /></h1>
 <br />
 <img src=gifs/phone.gif /><h1>About Me</h1><img src=gifs/paper.gif />
 <br>
