--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -9,9 +9,9 @@ body, html {
 <body background="background.gif">
 <body>
 <center>
-<h1><img src=gifs/smiley.gif />Welcome To My Cool WebSite!!!<img src=gifs/lime.gif /></h1>
+<h1><img src=gifs/smiley.gif / >Welcome To Mia's Cool WebSite!!!<img src=gifs/lime.gif /></h1>
 <br />
-<img src=gifs/phone.gif /><h1>About Me</h1><img src=gifs/paper.gif />
+<h1><img src=gifs/phone.gif />About Me<img src=gifs/paper.gif /></h1>
 <br>
 <h3>
 hello! my name is Mia. my pronouns are she/her. i'm 18, trans and pan. i like video games a lot. I also like music a lot.<br>
@@ -23,11 +23,11 @@ please dm me about anything and everything! i love talking to people. :)<br>
 </h3>
 <br>
 <br>
-<img src=gifs/dew.gif /><h1> Intrests </h1><img src=gifs/cpep.gif />
+<h1><img src=gifs/dew.gif />Intrests<img src=gifs/cpep.gif /></h1>
   <h2> i love all of these. please talk to me about any/all of these. in no paricular order i love these all the same </h2>
 <br>
   <br>
-  <img src=gifs/sonic.gif /><h2>Video Games</h2><img src=gifs/N64.gif />
+  <h2><img src=gifs/sonic.gif />Video Games<img src=gifs/N64.gif /></h2>
   <br>
 <h3>Taiko no Tatsujin<br>
   pop'n music (Bemani in general but i play pop'n)<br>
@@ -62,7 +62,7 @@ DOOM<br>
   and many many more..... (i play a LOT of video games. like, a LOT.)</h3>
  <br>
   <br>
-  <img src=gifs/totakeke.gif /><h2>Music</h2><img src=gifs/dance.gif />
+  <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
   <h2>
 <a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465/photo/1/>">Topster 5-12-21</a></h2><br><h3>
   Lemon Demon/Neil Ciciriega (he is a funny.)<br>
@@ -90,7 +90,7 @@ feel free to reccomend me music! i love listening to things ive never heard befo
   </h3>
   <br>
   <br>
-  <img src=gifs/tv.gif /><h2>Shows</h2><img src=gifs/vhs.gif /><br><h3>
+  <h2><img src=gifs/tv.gif />Shows<img src=gifs/vhs.gif /></h2><br><h3>
   Homestar Runner<br>
   Aqua Teen Hunger Force<br>
   Beavis and Butthead<br>
@@ -105,7 +105,7 @@ And more...
   </h3>
   <br>
   <br>
-  <img src=gifs/disc.gif /><h2>Other</h2><img src=gifs/win.gif /><br><h3>
+  <h2><img src=gifs/disc.gif />Other<img src=gifs/win.gif /></h2><br><h3>
   Mountain Dew<br>
   Vintage Technology<br>
   Media Archival<br>
@@ -119,7 +119,7 @@ Garfield<br>
 <br>
   <br>
 <br>
-<img src=gifs/house.gif /><h1> Socials/Contact </h1><img src=gifs/mail.gif />
+<h1><img src=gifs/house.gif />Socials/Contact<img src=gifs/mail.gif /></h1>
 <h3><a href="https://twitter.com/BajaBlastGrrl03/">Twitter: @BajaBlastGrrl03</a>
 <br> Discord: BajaBlastGrrl03#9091</h3>
 <br>
@@ -162,7 +162,7 @@ Garfield<br>
 <br>
 <br>
 <br>
-  <img src=gifs/headphone.gif /><h1><a href="http://www.ballsackradio.com/">Check out my radio station!</a><img src=gifs/neil.gif />
+  <h1><img src=gifs/headphone.gif /><a href="http://www.ballsackradio.com/">Check out my radio station!<img src=gifs/neil.gif /></a>
 <br>
 <br>
 </center>
