--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -3,6 +3,11 @@
 <title>BajaBlastGrrl03</title>
 </head>
 <style>
+  <style type="text/css">
+@font-face {
+    font-family: "pm_dialog";
+    src: url(http://www.ballackradio.com/pm_dialog.ttf) format("truetype");
+}
 body, html {
 }
 </style>
