--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -2,10 +2,14 @@
 <head>
 <title>BajaBlastGrrl03</title>
 </head>
-  <style type="text/css">
+<style> 
 @font-face {
-    font-family: "pm_dialog";
-    src: url(http://www.ballackradio.com/pm_dialog.ttf) format("truetype");
+   font-family: papermario;
+   src: url(pm_dialog.ttf);
+}
+
+* {
+   font-family: papermario;
 }
 </style>
 <body background="background.gif">
