--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 <br>
 <p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
   <br>
-  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a>  ---  <a href="https://www.twitter.com/BallsackFeed">Live-updating Twitter Bot</a></p>
+  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a> 
+    <br>
+<a href="https://www.twitter.com/BallsackFeed">Live-updating Twitter Bot</a></p>
+<br>
+<a class="twitter-timeline" href="https://twitter.com/BallsackFeed?ref_src=twsrc%5Etfw">Tweets by BallsackFeed</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
   <br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
