--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 <br>
 <p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
   <br>
-  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a> 
+  <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a></p>
     <br>
-<a href="https://www.twitter.com/BallsackFeed">Live-updating Twitter Bot</a></p>
+    <br>
+<h2><a href="https://www.twitter.com/BallsackFeed">Live-updating Twitter Bot</a></h2>
 <br>
-<a class="twitter-timeline" href="https://twitter.com/BallsackFeed?ref_src=twsrc%5Etfw">Tweets by BallsackFeed</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<center><a class="twitter-timeline" data-width="650" data-height="300" href="https://twitter.com/BallsackFeed?ref_src=twsrc%5Etfw">Tweets by BallsackFeed</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center> 
   <br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
