--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -123,12 +123,15 @@ Garfield<br>
   Winamp<br>
   and many more... </h3>
 <br>
+
   <br>
 <br>
 <h1><img src=gifs/house.gif />Socials/Contact<img src=gifs/mail.gif /></h1>
 <h3><a href="https://twitter.com/BajaBlastGrrl03/">Twitter: @BajaBlastGrrl03</a>
 <br> Discord: BajaBlastGrrl03#9091</h3>
 <br>
+   <br>
+   <h3><a href="https://twitter.com/i/events/1418108541857009668/">My Art moment on twitter</a>
 <br>
 <h2>Buttonz</h2>
 <br>
