--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <br>
 <p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
   <br>
+  <h2><a href"https://ballsack-radio-merch-store.creator-spring.com/">BALLSACK RADIO MERCH YAY :)</a></h2>
+  <br>
   <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a></p>
     <br>
     <br>
