--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -65,6 +65,8 @@ DOOM<br>
   RollerCoaster Tycoon<br>
   WarioWare<br>
   LocoRoco<br>
+  Metroid<br>
+  Project Diva<br>
   and many many more..... (i play a LOT of video games. like, a LOT.)</h3>
  <br>
   <br>
