--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <center>
-  <h1><img src=cirno.png /> <b>BALLSACK RADIO!</b> <img src=cirno.png /></h1>
+  <h1><img src=cirno.png /> <img src="BSR website banner.png" width="400" height="100"/> <img src=cirno.png /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
 <p>artist - name:</p>
-<embed type="text/html" src="http://107.2.168.189:8000/currentsong?sid=1" height="30"></embed>
+<embed type="text/html" src="http://107.2.168.189:8000/currentsong?sid=1" height="60"></embed>
   <br>
 <p>up next:</p>
-<embed type="text/html" src="http://107.2.168.189:8000/nextsong?sid=1" height="30"></embed>
+<embed type="text/html" src="http://107.2.168.189:8000/nextsong?sid=1" height="60"></embed>
 <br>
 <br>
 <p>download for your own music player!</p>
@@ -41,6 +41,7 @@
 <img src="buttons/al.gif" />
 <img src="buttons/weezer.gif" />
 <img src="buttons/gothtml.gif"/>
+<img src="buttons/popnbutton2.gif"/>
 <br>
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
