--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <img src="buttons/al.gif" />
 <img src="buttons/weezer.gif" />
 <img src="buttons/gothtml.gif"/>
-<img src="buttons/popnbutton2.gif"/>
+<img src="popnbutton2.gif"/>
 <br>
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
