--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
-<img src="buttons/weezer.gif" />
+  <a href="https://www.youtube.com/user/terrariacraftish/"><img src="buttons/weezer.gif" /></a>
 <img src="buttons/gothtml.gif"/>
 <img src="popnbutton2.gif"/>
 <br>
