--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -72,7 +72,7 @@ DOOM<br>
   <br>
   <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
   <h2>
-<a href="https://twitter.com/BajaBlastGrrl03/status/1392420760916926465?s=20>">Topster 5-12-21</a></h2><br><h3>
+<a href="https://twitter.com/BajaBlastGrrl03/status/1455356622507708419>">Topster 11-1-21</a></h2><br><h3>
   Lemon Demon/Neil Ciciriega (he is a funny.)<br>
   Jack Stauber<br>
   They Might Be Giants<br>
