--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <a href="https://www.youtube.com/channel/UC9Yy7Tig7KR0mX4NJz_KGgA"><img src="buttons/dreamcast.gif" /></a>
   <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
   <a href="https://animatearchive.neocities.org/"><img src="buttons/flash.gif" /></a>
-<img src="buttons/koolaid.gif"/>
+  <a href="https://www.koolaid.com/"><img src="buttons/koolaid.gif"/></a>
 <br>
 <img src="buttons/midi.gif" />
 <img src="buttons/n64.gif" />
