--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <br>
   <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work. <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
 <br>
-  <p><a href="http://107.2.168.189:8000/sid=1/">Or, click here.</a></p>
- 
+  <button onclick="window.location.href = 'http://107.2.168.189:8000/sid=1/';">Or, click here.</button>
+ <br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
@@ -81,5 +81,6 @@
 <img src="buttons/sa2.gif" />
 <img src="buttons/tails.gif" />
 <br>
+  <p>2021 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
 </center>
 </body>
