--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <center>
-  <h1><img src=cirno.png /> <img src="BSR website banner.png" width="400" height="100"/> <img src=cirno.png /></h1>
+  <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday.png" width="400" height="100"/> <img src="cirno (cropped) bday.png" /></h1>
+<br>
+  <img src="bsr1yr.png" width="650" height="150"/>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
