--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center>
-  <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday.png" width="400" height="100"/> <img src="cirno (cropped) bday.png" /></h1>
+  <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday.png" width="400" height="200"/> <img src="cirno (cropped) bday.png" /></h1>
 <br>
   <img src="bsr1yr.png" width="650" height="150"/>
 <br>
@@ -82,6 +82,6 @@
 <img src="buttons/sa2.gif" />
 <img src="buttons/tails.gif" />
 <br>
-  <p>2021 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
+  <p>2020 - 2021 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
 </center>
 </body>
