--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <center>
-  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="200"/> <img src="cirno.png" /></h1>
+  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
@@ -81,5 +81,7 @@
 <img src="buttons/tails.gif" />
 <br>
   <p>2020 - 2021 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
+<br>
+  <p>Supplying the jams since November 29 2020</p>
 </center>
 </body>
