--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <link rel="icon" href="cirno.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body background="bg.png">
+<body background="bg xmas.png">
 </head>
 <body>
 <center>
-  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
+  <h1><img src="cirno (cropped) xmas.png" /> <img src="BSR website banner xmas.png" width="400" height="200"/> <img src="cirno (cropped) xmas.png" /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
