--- a/index.html
+++ b/index.html
@@ -83,5 +83,7 @@
   <p>2020 - 2021 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
 <br>
   <p>Supplying the jams since November 29 2020</p>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img src="marcy.gif" />
 </center>
 </body>
