--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <br>
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
-<a href="https://www.youtube.com/channel/UC9Yy7Tig7KR0mX4NJz_KGgA"><img src="buttons/dreamcast.gif" /></a>
+<img src="buttons/dreamcast.gif" />
   <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
   <a href="https://animatearchive.neocities.org/"><img src="buttons/flash.gif" /></a>
   <a href="https://www.koolaid.com/"><img src="buttons/koolaid.gif"/></a>
