--- a/tapes.html
+++ b/tapes.html
@@ -3,7 +3,7 @@
   <link rel="icon" href="cirno.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body bst background="bg.png">
+<body background="bst background.png">
 </head>
 <body>
 <center>
