--- a/tapes.html
+++ b/tapes.html
@@ -16,7 +16,7 @@
 <p> no clue what's on it . and i'm not going to tell you. only way for you to know is to catch it airing on BSR all at once  .</p>
 <br> <p> dm DJ BajaBlast for it . she will way overcharge because this is one of a kind "physical nft" collectors edition cassette tape </p><br>
 the shitty walmart tape this was "pressed(?)" on sounds like shit and i didnt account for proper cutoffs (becuase the walmart tape sucks)</p> <br>
-<img src="PENISMIX2007.png"> <br> <img src="pm2007 real.png"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img src="PENISMIX2007.png"> <br> <img src="pm2007 real.png"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <img src="marcy2.gif" />
   </center>
 </body>
