--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -17,12 +17,12 @@
 <center>
 <h1><img src=gifs/smiley.gif / >Welcome To Mia's Cool WebSite!!!<img src=gifs/lime.gif /></h1>
 <br />
+   <p> Last Updated: Febuary 15th 2022 </p>
+<br>
 <h1><img src=gifs/phone.gif />About Me<img src=gifs/paper.gif /></h1>
 <br>
 <h3>
-hello! my name is Mia. my pronouns are she/her. i'm 18, trans and pan. i like video games a lot. I also like music a lot.<br>
-  i use tone indicators every once and a while. if that bothers you sorry lol<br>
-if u need me to tag something lmk<br>
+hello! my name is Mia. my pronouns are she/her. i'm 18, trans lesbian. i like video games a lot. I also like music a lot.<br>
   i made this instead of a carrd becuase HTML RULEZ!@!!!<br>
 please dm me about anything and everything! i love talking to people. :)<br>
   
@@ -35,14 +35,23 @@ please dm me about anything and everything! i love talking to people. :)<br>
   <br>
   <h2><img src=gifs/sonic.gif />Video Games<img src=gifs/N64.gif /></h2>
   <br>
-<h3>Taiko no Tatsujin<br>
-  pop'n music (Bemani in general but i play pop'n)<br>
-  Puyo Puyo<br>
+   
+<h3><b>Rhythm games, namely:</b><br>
+Taiko no Tatsujin (hard 8*/easy 9*)<br>
+  pop'n music (H30/N32 i use an ASC)<br>
+Dance Dance Revolution (6/7 i only get to play when i end up at an arcade)<br>
+   <p>(Bemani in general but i main pop'n and DDR)</p><br>
+Hatsune Miku Project Diva [specifically, mostly Future Tone] (8*H/7.5*EX i am struggling with chords)
+     Rhythm Heaven (Megamix all perfect) <br>
+  PaRappa The Rapper (100+% every game)<br>
+  Vib-Ribbon<br>
+
+   <br>  
+Puyo Puyo<br>
   Sonic The Hedgehog<br>
   Video Game/Tech Collecting<br>
-  PaRappa The Rapper<br>
-Katamari<br>
-  Rhythm Heaven<br>
+   Pikmin<br>
+   Katamari<br>
   Pac-Man<br>
   Paper Mario<br>
   Okami<br>
@@ -50,15 +59,14 @@ Katamari<br>
   Animal Crossing<br>
   Kirby<br>
   Undertale/Deltarune<br>
-  Vib-Ribbon<br>
   Lego Island 1 (i HATE li2)<br>
   PikuNiku<br>
   Tetris<br>
   CROSSNIQ+<br>
   Crazy Taxi<br>
-DOOM<br>
+  DOOM<br>
   Puzzle Fighter<br>
- Cave Story<br>
+  Cave Story<br>
   Super Mario<br>
   VVVVVV<br>
   Peggle<br>
@@ -66,18 +74,18 @@ DOOM<br>
   WarioWare<br>
   LocoRoco<br>
   Metroid<br>
-  Project Diva<br>
   and many many more..... (i play a LOT of video games. like, a LOT.)</h3>
  <br>
   <br>
   <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
   <h2>
 <a href="https://twitter.com/BajaBlastGrrl03/status/1455356622507708419>">Topster 11-1-21</a></h2><br><h3>
-  Lemon Demon/Neil Ciciriega (he is a funny.)<br>
+  They Might Be Giants (they're my favorite :)   )<br>
+  Lemon Demon/Neil Ciciriega (im cringe but im free)<br>
   Jack Stauber<br>
-  They Might Be Giants<br>
   Music Collecting<br>
   Classic Rock, in general<br>
+Men At Work <br>
   The Beatles (i am sorry)<br>
   Weezer (i am SO SO sorry)<br>
 talkshow boy<br>
@@ -93,20 +101,22 @@ Billy Cobb<br>
   Red Vox<br>
   2-Mello<br>
   Hampsterdance: The Album<br>
-  and video game music (i am sorry)<br>
+  and video game music/rhythm game music (i am sorry)<br>
 feel free to reccomend me music! i love listening to things ive never heard before!
   </h3>
   <br>
   <br>
-  <h2><img src=gifs/tv.gif />Shows<img src=gifs/vhs.gif /></h2><br><h3>
+  <h2><img src=gifs/tv.gif />Shows/Anime/Movies/YouTube/Whatever<img src=gifs/vhs.gif /></h2><br>
+   <p>i don't watch too many tv shows/movies at all! im a Gamer i gotta be Gaming</p><br><h3>
   Homestar Runner<br>
   Aqua Teen Hunger Force<br>
   Beavis and Butthead<br>
   Pop Team Epic<br>
 Nichijou<br>
 Azumanga Daioh (watching rn)<br>
-  Veggietales (lmao)<br>
+  Veggietales (ask me about my collection)<br>
 Angry Video Game Nerd<br>
+DankPods<br>
   Hey Arnold!<br>
   Rugrats<br>
 And more...  
@@ -114,7 +124,7 @@ And more...
   <br>
   <br>
   <h2><img src=gifs/disc.gif />Other<img src=gifs/win.gif /></h2><br><h3>
-  Mountain Dew<br>
+   <b>Mountain Dew</b><br>
   Vintage Technology<br>
   Media Archival<br>
  Windows XP<br>
@@ -130,7 +140,7 @@ Garfield<br>
 <br>
 <h1><img src=gifs/house.gif />Socials/Contact<img src=gifs/mail.gif /></h1>
 <h3><a href="https://twitter.com/BajaBlastGrrl03/">Twitter: @BajaBlastGrrl03</a>
-<br> Discord: BajaBlastGrrl03#9091</h3>
+<br> Discord: BajaBlastGrrl03#6894</h3>
 <br>
    <br>
    <h3><a href="https://twitter.com/i/events/1418108541857009668/">My Art moment on twitter</a>
