--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -79,7 +79,7 @@ Puyo Puyo<br>
   <br>
   <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
   <h2>
-<a href="https://twitter.com/BajaBlastGrrl03/status/1455356622507708419>">Topster 11-1-21</a></h2><br><h3>
+<a href="https://twitter.com/BajaBlastGrrl03/status/1455356622507708419">Topster 11-1-21</a></h2><br><h3>
   They Might Be Giants (they're my favorite :)   )<br>
   Lemon Demon/Neil Ciciriega (im cringe but im free)<br>
   Jack Stauber<br>
