--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -143,7 +143,7 @@ Garfield<br>
 <br> Discord: BajaBlastGrrl03#6894</h3>
 <br>
    <br>
-   <h3><a href="https://twitter.com/i/events/1418108541857009668/">My Art moment on twitter</a>
+ // <h3><a href="https://twitter.com/i/events/1418108541857009668/">My Art moment on twitter</a>
 <br>
 <h2>Buttonz</h2>
 <br>
