--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -40,8 +40,8 @@ please dm me about anything and everything! i love talking to people. :)<br>
 Taiko no Tatsujin (hard 8*/easy 9*)<br>
   pop'n music (H30/N32 i use an ASC)<br>
 Dance Dance Revolution (6/7 i only get to play when i end up at an arcade)<br>
-   <p>(Bemani in general but i main pop'n and DDR)</p><br>
-Hatsune Miku Project Diva [specifically, mostly Future Tone] (8*H/7.5*EX i am struggling with chords)
+   </h3><p>(Bemani in general but i main pop'n and DDR)</p><h3><br>
+Hatsune Miku Project Diva [specifically, mostly Future Tone] (8*H/7.5*EX i am struggling with chords)<br>
      Rhythm Heaven (Megamix all perfect) <br>
   PaRappa The Rapper (100+% every game)<br>
   Vib-Ribbon<br>
