--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -45,7 +45,7 @@ Hatsune Miku Project Diva [specifically, mostly Future Tone] (8*H/7.5*EX i am st
      Rhythm Heaven (Megamix all perfect) <br>
   PaRappa The Rapper (100+% every game)<br>
   Vib-Ribbon<br>
-    </h3><p>(Bemani in general but i main pop'n and DDR)</p><h3><br>
+    </h3><p>*(Bemani in general but i main pop'n and DDR)</p><h3><br>
 
    <br>  
 Puyo Puyo<br>
