--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -77,8 +77,11 @@ Puyo Puyo<br>
  <br>
   <br>
   <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
-  <h2>
+  <br>
 <a href="https://twitter.com/BajaBlastGrrl03/status/1493817899194064897">Topster 2-15-22</a></h2><br><h3>
+<a href="https://twitter.com/BajaBlastGrrl03/status/1493885392294060034">VGM Topster 2-15-22</a></h2><br><h3>
+<br>
+
   They Might Be Giants (they're my favorite :)   )<br>
   Lemon Demon/Neil Ciciriega (im cringe but im free)<br>
   Jack Stauber<br>
@@ -113,6 +116,7 @@ feel free to reccomend me music! i love listening to things ive never heard befo
   Pop Team Epic<br>
 Nichijou<br>
 Azumanga Daioh (watching rn)<br>
+Aggretsuko<br>
   Veggietales (ask me about my collection)<br>
 Angry Video Game Nerd<br>
 DankPods<br>
@@ -142,7 +146,7 @@ Garfield<br>
 <br> Discord: BajaBlastGrrl03#6894</h3>
 <br>
    <br>
- // <h3><a href="https://twitter.com/i/events/1418108541857009668/">My Art moment on twitter</a>
+
 <br>
 <h2>Buttonz</h2>
 <br>
