--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -78,8 +78,9 @@ Puyo Puyo<br>
   <br>
   <h2><img src=gifs/totakeke.gif />Music<img src=gifs/dance.gif /></h2>
   <br><h2>
-<a href="https://twitter.com/BajaBlastGrrl03/status/1493817899194064897">Topster 2-15-22</a></h2><br><h2>
-<a href="https://twitter.com/BajaBlastGrrl03/status/1493885392294060034">VGM Topster 2-15-22</a></h2><br><h3>
+<a href="https://twitter.com/BajaBlastGrrl03/status/1493817899194064897">Topster 2-15-22</a> ~~~ 
+<a href="https://twitter.com/BajaBlastGrrl03/status/1493885392294060034">VGM Topster 2-15-22</a> </h2>
+</h2><br><h3>
 
   They Might Be Giants (they're my favorite :)   )<br>
   Lemon Demon/Neil Ciciriega (im cringe but im free)<br>
