--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <a href="http://www.crouton.net/"><img src="buttons/no.gif" /></a >
 <img src="buttons/playstation.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/winamp.gif" /></a>
+  <img src="buttons/miku approved.gif" />
 <br>
 <img src="buttons/2003.gif" />
 <img src="buttons/aim.gif" />
