--- a/index.html
+++ b/index.html
@@ -62,10 +62,45 @@
 <br>
 <img src="buttons/midi.gif" />
 <img src="buttons/n64.gif" />
-  <a href="http://www.crouton.net/"><img src="buttons/no.gif" /></a >
+<a href="http://www.crouton.net/"><img src="buttons/no.gif" /></a >
 <img src="buttons/playstation.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/winamp.gif" /></a>
-  <img src="buttons/miku approved.gif" />
+<img src="buttons/miku approved.gif" />
+ <br>
+<img src="buttons/3dot5mmfc-button.gif" />
+<img src="buttons/88x31blank.gif" />
+<img src="buttons/n642.gif" />
+<img src="buttons/amd_now.gif" />
+<img src="buttons/anythingbut.gif" />
+<img src="buttons/antinft.gif" />
+ <br>
+<img src="buttons/bestviewedopen.gif" />
+<img src="buttons/betsyfries.gif" />
+<img src="buttons/bitmap.gif" />
+<img src="buttons/braknow.gif" />
+<img src="buttons/bu12.gif" />
+<img src="buttons/bugland.gif" />
+   <br>
+  <a href="https://cyber.dabamos.de/88x31/index.html"><img src="buttons/button_now.gif" /></a>
+<img src="buttons/button7.gif" />
+<img src="buttons/cheezit.gif" />
+<img src="buttons/heyarnold.gif" />
+<img src="buttons/mrpgs_button_32.gif" />
+<img src="buttons/mtndewnow.gif" />
+     <br>
+<img src="buttons/net.gif" />
+<img src="buttons/seedyourtorrents.gif" />
+<img src="buttons/sega_online.gif" />
+<img src="buttons/sun.gif" />
+  <a href="https://twitter.com/BallsackFeed"><img src="buttons/twitterbutton.gif" /></a>
+<img src="buttons/vocaloid.gif" />
+       <br>
+<img src="buttons/votepicture.gif" />
+<img src="buttons/webpassion.gif" />
+  <a href="http://wii.com"><img src="buttons/wii.gif" /></a>
+<img src="buttons/winamp1.gif" />
+  <a href="https://skins.webamp.org"><img src="buttons/winamp-skinsb.gif" /></a>
+<img src="buttons/imissxp.gif" />
 <br>
 <img src="buttons/2003.gif" />
 <img src="buttons/aim.gif" />
