--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 <img src="buttons/sa2.gif" />
 <img src="buttons/tails.gif" />
 <br>
+<img src="buttons/ddr player.png" />
+<br>
+<img src="buttons/popn player.png" />
+  <br>
   <p>2020 - 2022 Ballsack Radio, a subsidary of <a href="https://cooldudeindustries.neocities.org">CoolDude Industries</a></p>
 <br>
   <p>Supplying the jams since November 29 2020</p>
