--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <a href="https://skins.webamp.org"><img src="buttons/winamp-skinsb.gif" /></a>
 <img src="buttons/imissxp.gif" />
   <a href="https://www.ebay.com/itm/313389461041"><img src="buttons/tupar_umd.gif" /></a>
-  <img src="buttons/sdblast.png" /
+  <img src="buttons/sdblast.png" />
   <br>
 <img src="buttons/2003.gif" />
 <img src="buttons/aim.gif" />
