--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <head>
-<title> ballsack radio :) </title>
-  <link rel="icon" href="cirno.png" type="image/png">
+<title> buttcheek broadcast :) </title>
+  <link rel="icon" href="reimu.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body background="bg.png">
+<body background="bg fools.png">
 </head>
 <body>
 <center>
-  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
+  <h1><img src="reimu.png" /> <img src="BSR website banner april fools.png" width="400" height="100"/> <img src="reimu.png" /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
@@ -27,9 +27,9 @@
 <br>
 <p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
   <br>
-  <h2><a href="https://discord.gg/7h4ntUYy8R">official ballsack radio discord server</a></h2>
+  <h2><a href="https://discord.gg/7h4ntUYy8R">official buttcheek broadcast discord server</a></h2>
   <br>
-  <h2><a href="https://ballsack-radio-merch-store.creator-spring.com/">BALLSACK RADIO MERCH YAY :)</a></h2>
+  <h2><a href="https://ballsack-radio-merch-store.creator-spring.com/">BUTTCHEEK BROADCAST MERCH YAY :)</a></h2>
   <br>
   <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a></p>
   <br>  
