--- a/xmas21.html
+++ b/xmas21.html
@@ -1,6 +1,6 @@
 <head>
 <title> ballsack radio :) </title>
-  <link rel="icon" href="cirno (cropped) bday.png" type="image/png">
+  <link rel="icon" href="cirno (cropped) xmas.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
 <body background="bg xmas.png">
