--- a/original.html
+++ b/original.html
@@ -46,6 +46,10 @@
   <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://107.2.168.189:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
 <br>
  <br>
+  <h4>Site Skins:</h4>
+<br>
+<p><a href="http://ballsackradio.com/">Current skin</a> - <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a></p>
+<br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
