--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <head>
-<title> buttcheek broadcast :) </title>
-  <link rel="icon" href="reimu.png" type="image/png">
+<title> ballsack radio :) </title>
+  <link rel="icon" href="cirno.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body background="bg fools.png">
+<body background="bg.png">
 </head>
 <body>
 <center>
-  <h1><img src="reimu.png" /> <img src="BSR website banner april fools.png" width="400" height="100"/> <img src="reimu.png" /></h1>
+  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
@@ -27,9 +27,9 @@
 <br>
 <p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
   <br>
-  <h2><a href="https://discord.gg/7h4ntUYy8R">official buttcheek broadcast discord server</a></h2>
+  <h2><a href="https://discord.gg/7h4ntUYy8R">official ballsack radio discord server</a></h2>
   <br>
-  <h2><a href="https://ballsack-radio-merch-store.creator-spring.com/">BUTTCHEEK BROADCAST MERCH YAY :)</a></h2>
+  <h2><a href="https://ballsack-radio-merch-store.creator-spring.com/">BALLSACK RADIO MERCH YAY :)</a></h2>
   <br>
   <p><a href="https://www.twitter.com/BajaBlastGrrl03">DJ BajaBlast's Twitter</a></p>
   <br>  
@@ -46,6 +46,10 @@
   <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://107.2.168.189:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
 <br>
  <br>
+  <h4>Site Skins:</h4>
+<br>
+<p><a href="http://ballsackradio.com/">Current skin</a> - <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a></p>
+<br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
@@ -137,7 +141,6 @@
 <br>
   <p>Supplying the jams since November 29 2020</p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <h1><a href="http://ballsackradio.com/original">april fools</a></h1>
 <img src="marcy.gif" />
 </center>
 </body>
