--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
 <br>
-  <h3><img src="construction.gif" />WILL BE SLOW! hardware maintenance, will be back to great by the end of April<img src="construction.gif" /></h3>
+  <h3><img src="construction.gif" width="25" height="25"/>WILL BE SLOW! hardware maintenance, will be back to great by the end of April<img src="construction.gif" width="25" height="25"/></h3>
 <br>
 <p>artist - name:</p>
 <embed type="text/html" src="http://107.2.168.189:8000/currentsong?sid=1" height="60"></embed>
