--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <center>
   <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
-<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://107.2.168.189:8000/sid=1" type="audio/mpeg"></audio>
+<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/107.2.168.189" type="audio/mpeg"></audio>
 <br>
   <h3><img src="construction.gif" width="50" height="50"/>WILL BE SLOW! hardware maintenance, will be back to great by the end of April<img src="construction.gif" width="50" height="50"/></h3>
 <br>
 <p>artist - name:</p>
-<embed type="text/html" src="http://107.2.168.189:8000/currentsong?sid=1" height="60"></embed>
+<embed type="text/html" src="http://98.55.62.153:8000/107.2.168.189/currentsong?sid=1" height="60"></embed>
   <br>
 <p>up next:</p>
-<embed type="text/html" src="http://107.2.168.189:8000/nextsong?sid=1" height="60"></embed>
+<embed type="text/html" src="http://98.55.62.153:8000/107.2.168.189/nextsong?sid=1" height="60"></embed>
 <br>
 <br>
 <p>download for your own music player!</p>
