--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <center>
   <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
-<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/107.2.168.189" type="audio/mpeg"></audio>
+<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/" type="audio/mpeg"></audio>
 <br>
   <h3><img src="construction.gif" width="50" height="50"/>WILL BE SLOW! hardware maintenance, will be back to great by the end of April<img src="construction.gif" width="50" height="50"/></h3>
 <br>
 <p>artist - name:</p>
-<embed type="text/html" src="http://98.55.62.153:8000/107.2.168.189/currentsong?sid=1" height="60"></embed>
+<embed type="text/html" src="http://98.55.62.153:8000/currentsong?sid=1" height="60"></embed>
   <br>
 <p>up next:</p>
-<embed type="text/html" src="http://98.55.62.153:8000/107.2.168.189/nextsong?sid=1" height="60"></embed>
+<embed type="text/html" src="http://98.55.62.153:8000/nextsong?sid=1" height="60"></embed>
 <br>
 <br>
 <p>download for your own music player!</p>
 <p><a href="ballsackradio.pls">PLS</a>  ---  <a href="ballsackradio.m3u">M3U</a></p>
 <br>
-<a href="http://107.2.168.189:8000/played.html?sid=1">Song History</a>
+<a href="http://98.55.62.153:8000/played.html?sid=1">Song History</a>
 <br>
   <h3>Powered by <a href="https://www.shoutcast.com/">SHOUTcast</a> and <a href="https://www.getwacup.com/">WACUP (WinAmp Community Update Project)</a></h3>
 <br>
-<p><a href="http://107.2.168.189:8000/">visit the SHOUTcast server page</a></p>
+<p><a href="http://98.55.62.153:8000/index.html?sid=1">visit the SHOUTcast server page</a></p>
   <br>
   <h2><a href="https://discord.gg/7h4ntUYy8R">official ballsack radio discord server</a></h2>
   <br>
@@ -45,7 +45,7 @@
   <br>
   <h4> Heads up to any <b>Google Chrome</b> users: </h4>
     <br>
-  <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://107.2.168.189:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
+  <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://http://98.55.62.153:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
 <br>
  <br>
   <h4>Site Skins:</h4>
