--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
   <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
-<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/" type="audio/mpeg"></audio>
+<h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/sid=1" type="audio/mpeg"></audio>
 <br>
 <p>artist - name:</p>
 <embed type="text/html" src="http://98.55.62.153:8000/currentsong?sid=1" height="60"></embed>
