--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -38,9 +38,9 @@ please dm me about anything and everything! i love talking to people. :)<br>
    
 <h3><b>Rhythm games, namely:</b><br>
 Taiko no Tatsujin (hard 8*/easy 9*)<br>
-  pop'n music* (H30/N32 i use an ASC)<br>
-Dance Dance Revolution* (6/7 i only get to play when i end up at an arcade)<br>
-Hatsune Miku Project Diva [specifically, mostly Future Tone] (8*H/7.5*EX i am struggling with chords)<br>
+  pop'n music* (32)<br>
+Dance Dance Revolution* (8)<br>
+Hatsune Miku Project Diva [specifically, mostly Future Tone] (8)<br>
      Rhythm Heaven (Megamix all perfect) <br>
   PaRappa The Rapper (100+% every game)<br>
   Vib-Ribbon<br>
