--- a/BajaBlast.html
+++ b/BajaBlast.html
@@ -150,24 +150,73 @@ Garfield<br>
 <br>
 <h2>Buttonz</h2>
 <br>
-<img src="buttons/xp.gif" />
+  <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
-<img src="buttons/weezer.gif" />
+  <a href="https://www.youtube.com/user/terrariacraftish/"><img src="buttons/weezer.gif" /></a>
 <img src="buttons/gothtml.gif"/>
+
 <br>
+  <img src="popnbutton2.gif"/>
 <img src="buttons/2600.gif" />
 <img src="buttons/dilbert.gif" />
 <img src="buttons/dreamcast.gif" />
-<img src="buttons/flash.gif" />
-<img src="buttons/koolaid.gif"/>
+  <a href="https://store.steampowered.com/app/945360/Among_Us/"><img src="buttons/among.png" /></a>
 <br>
+    <a href="https://animatearchive.neocities.org/"><img src="buttons/flash.gif" /></a>
+  <a href="https://www.koolaid.com/"><img src="buttons/koolaid.gif"/></a>
 <img src="buttons/midi.gif" />
 <img src="buttons/n64.gif" />
-<img src="buttons/no.gif" />
-<img src="buttons/playstation.gif" />
+<a href="http://www.crouton.net/"><img src="buttons/no.gif" /></a >
+
+ <br>
+  <img src="buttons/playstation.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/winamp.gif" /></a>
+<img src="buttons/miku approved.gif" />
+<img src="buttons/3dot5mmfc-button.gif" />
+<img src="buttons/88x31blank.gif" />
+
+ <br>
+  <img src="buttons/n642.gif" />
+<img src="buttons/amd_now.gif" />
+<img src="buttons/anythingbut.gif" />
+<img src="buttons/antinft.gif" />
+<img src="buttons/bestviewedopen.gif" />
+
+   <br>
+  <img src="buttons/betsyfries.gif" />
+<img src="buttons/bitmap.gif" />
+<img src="buttons/braknow.gif" />
+<img src="buttons/bu12.gif" />
+<img src="buttons/bugland.gif" />
+  <br>
+  <a href="https://cyber.dabamos.de/88x31/index.html"><img src="buttons/button_now.gif" /></a>
+<img src="buttons/button7.gif" />
+<img src="buttons/cheezit.gif" />
+<img src="buttons/heyarnold.gif" />
+<img src="buttons/mrpgs_button_32.gif" />
+
+     <br>
+  <img src="buttons/mtndewnow.gif" />
+<img src="buttons/net.gif" />
+<img src="buttons/seedyourtorrents.gif" />
+<img src="buttons/sega_online.gif" />
+<img src="buttons/sun.gif" />
+
+       <br>
+    <a href="https://twitter.com/BallsackFeed"><img src="buttons/twitterbutton.gif" /></a>
+<img src="buttons/vocaloid.gif" />
+<img src="buttons/votepicture.gif" />
+<img src="buttons/webpassion.gif" />
+  <a href="http://wii.com"><img src="buttons/wii.gif" /></a>
+
 <br>
+  <img src="buttons/winamp1.gif" />
+  <a href="https://skins.webamp.org"><img src="buttons/winamp-skinsb.gif" /></a>
+<img src="buttons/imissxp.gif" />
+  <a href="https://www.ebay.com/itm/313389461041"><img src="buttons/tupar_umd.gif" /></a>
+  <img src="buttons/sdblast.png" />
+  <br>
 <img src="buttons/2003.gif" />
 <img src="buttons/aim.gif" />
 <img src="buttons/twotrucks.gif" />
@@ -184,6 +233,10 @@ Garfield<br>
 <img src="buttons/sa2.gif" />
 <img src="buttons/tails.gif" />
 <br>
+<img src="buttons/ddr player.png" />
+<br>
+<img src="buttons/popn player.png" />
+  <br>
 <br>
 <br>
   <h1><img src=gifs/headphone.gif /><a href="http://www.ballsackradio.com/">Check out my radio station!<img src=gifs/neil.gif /></a>
