--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <br>
   <h4> Heads up to any <b>Google Chrome</b> users: </h4>
     <br>
-  <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://http://98.55.62.153:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
+  <p>Right click the play button and <b>open audio in new tab</b> to get the audio to work.   <button onclick="window.location.href = 'http://98.55.62.153:8000/sid=1/';">Or, click here.</button> <abbr title="Chrome throws a fit whenever a site asset isn't loaded with HTTPS. This website, all well as the BSR audio stream, is standard HTTP. The workaround is to load just the audio stream by opening the audio in a new tab.">Here's Why.</abbr></p>
 <br>
  <br>
   <h4>Site Skins:</h4>
