--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <head>
 <title> ballsack radio :) </title>
-  <link rel="icon" href="cirno.png" type="image/png">
+  <link rel="icon" href="cirno (cropped) bday.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body background="bg.png">
+<body background="bg bday2.png">
 </head>
 <body>
 <center>
-  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
+  <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday 2.png" width="400" height="200"/> <img src="cirno (cropped) bday.png" /></h1>
+<br>
+  <img src="bsr2yr.png" width="650" height="150">
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/sid=1" type="audio/mpeg"></audio>
 <br>
