--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <head>
 <title> ballsack radio :) </title>
-  <link rel="icon" href="cirno (cropped) bday.png" type="image/png">
+  <link rel="icon" href="cirno.png" type="image/png">
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8"/>
-<body background="bg bday2.png">
+<body background="bg.png">
 </head>
 <body>
 <center>
-  <h1><img src="cirno (cropped) bday.png" /> <img src="BSR website banner birthday 2.png" width="400" height="200"/> <img src="cirno (cropped) bday.png" /></h1>
-<br>
-  <img src="bsr2yr.png" width="650" height="150">
+  <h1><img src="cirno.png" /> <img src="BSR website banner.png" width="400" height="100"/> <img src="cirno.png" /></h1>
 <br>
 <h2>Play Now:</h2><audio controls="" preload="none" style="width:16em;padding:0;"><source src="http://98.55.62.153:8000/sid=1" type="audio/mpeg"></audio>
 <br>
@@ -50,7 +48,9 @@
  <br>
   <h4>Site Skins:</h4>
 <br>
-<p><a href="http://ballsackradio.com/">Current skin</a> - <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a></p>
+<p><a href="http://ballsackradio.com/">Current skin</a> <br>
+ <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <br>
+ <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a> - <a href="http://ballsackradio.com/bday22">2nd Birthday</a></p>
 <br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
