--- a/fools22.html
+++ b/fools22.html
@@ -50,8 +50,10 @@
  <br>
   <h4>Site Skins:</h4>
 <br>
-<p><a href="http://ballsackradio.com/">Current skin</a> - <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a></p>
-  <br>
+<p><a href="http://ballsackradio.com/">Current skin</a> - <a href="http://ballsackradio.com/original">Original</a><br>
+ <a href="http://ballsackradio.com/bday21">1st Birthday</a> - <a href="http://ballsackradio.com/xmas21">Xmas 2021</a> - <br>
+ <a href="http://ballsackradio.com/fools22">Buttcheek Broadcast (April Fools '22)</a> - <a href="http://ballsackradio.com/bday22">2nd Birthday</a></p>
+<br>
   <img src="buttons/xp.gif" />
 <a href="http://www.getwacup.com/"><img src="buttons/Winamp2.gif" /></a>
 <img src="buttons/al.gif" />
